Increased permgen space for UI tests with tycho-surefire plugin.